# claude-conversation-manager

./: .gitignore  README.md  app.py  claude_models.py  config.py  dashboard_data.py  file_browser.py  indexer.py  init_cli.py  install.sh  pyproject.toml  requirements.txt  run.sh  terminal_opener.py
templates/: index.html
