[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-session-dashboard"
version = "0.1.0"
description = "Local-first dashboard for browsing, searching, and understanding Claude Code sessions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["claude", "claude-code", "dashboard", "sessions", "local-first", "analytics"]
authors = [
  { name = "Vincent van Deth" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Environment :: X11 Applications",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "pywebview>=5.0",
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/Vinix24/claude-conversation-manager"
Repository = "https://github.com/Vinix24/claude-conversation-manager"
Issues = "https://github.com/Vinix24/claude-conversation-manager/issues"

[project.scripts]
claude-session-dashboard = "app:main"
claude-session-index = "indexer:main"
claude-session-dashboard-init = "init_cli:main"

[tool.setuptools]
include-package-data = true
py-modules = [
  "app",
  "claude_models",
  "config",
  "dashboard_data",
  "file_browser",
  "init_cli",
  "indexer",
  "terminal_opener",
]

[tool.setuptools.data-files]
"share/claude-session-dashboard/templates" = ["templates/index.html"]
